--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
+    "mongoose-unique-validator": "^2.0.3",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
