--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,7 @@
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://dbCyberUser:<password>@cluster0.astqo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+AUTH0_SECRET='LONG_RANDOM_VALUE'
+AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_ISSUER_BASE_URL='https://cyberpunk-init.eu.auth0.com'
+AUTH0_CLIENT_ID='YOUR_AUTH0_CLIENT_ID'
+AUTH0_CLIENT_SECRET='YOUR_AUTH0_CLIENT_SECRET'
