--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^5.11.18",
     "next": "10.0.7",
     "react": "17.0.1",
