--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.6",
     "@auth0/nextjs-auth0": "^1.0.0",
     "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^5.11.18",
